objects/EUR_TR_SalesTrend__c.object
<CustomObject>
    <description>Is using by PR Turkey TT Project</description>
    <fields>
        <fullName>EUR_TR_BrandQualitySize__c</fullName>
        <label>EUR_TR_BrandQualitySize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_BrandQuality__c</fullName>
        <label>EUR_TR_BrandQuality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Brand__c</fullName>
        <label>EUR_TR_Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Channel__c</fullName>
        <label>EUR_TR_Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_LE12Amount__c</fullName>
        <label>EUR_TR_LE12Amount</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_LE1Amount__c</fullName>
        <label>EUR_TR_LE1Amount</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_LE3Amount__c</fullName>
        <label>EUR_TR_LE3Amount</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_LYLE12Amount__c</fullName>
        <label>EUR_TR_LYLE12Amount</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_LYLE1Amount__c</fullName>
        <label>EUR_TR_LYLE1Amount</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_LYLE3Amount__c</fullName>
        <label>EUR_TR_LYLE3Amount</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EUR_TR_RelatedAccount</label>
        <referenceTo>EUR_TR_Account__c</referenceTo>
        <relationshipName>EUR_TR_SalesTrend</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EUR TR Sales Trend</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_TR_RelatedAccount__c</columns>
        <columns>EUR_TR_Brand__c</columns>
        <columns>EUR_TR_BrandQuality__c</columns>
        <columns>EUR_TR_BrandQualitySize__c</columns>
        <columns>EUR_TR_LE12Amount__c</columns>
        <columns>EUR_TR_LE1Amount__c</columns>
        <columns>EUR_TR_LE3Amount__c</columns>
        <columns>EUR_TR_LE6Amount__c</columns>
        <columns>EUR_TR_LE9Amount__c</columns>
        <columns>EUR_TR_LYLE12Amount__c</columns>
        <columns>EUR_TR_LYLE1Amount__c</columns>
        <columns>EUR_TR_LYLE3Amount__c</columns>
        <columns>EUR_TR_LYLE6Amount__c</columns>
        <columns>EUR_TR_LYLE9Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>EUR_TR_SalesTrend No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUR TR Sales Trend</pluralLabel>
    <recordTypes>
        <fullName>EUR_TR_SalesTrend</fullName>
        <active>true</active>
        <label>EUR_TR_SalesTrend</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>